// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders correctly with alert data and has alert 1`] = `
<div
  css={
    Object {
      "map": undefined,
      "name": "vkixka",
      "next": undefined,
      "styles": "
        height: 100vh;
        display: flex;
        flex-direction: column;
      ",
    }
  }
>
  <header
    css={
      Object {
        "map": undefined,
        "name": "tejz0l",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, #003d59, #33637a);
  ;
      ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "1thgah9",
          "next": undefined,
          "styles": "
            display: flex;
          ",
        }
      }
    >
      <div
        className="Header-Title-Style"
        css={
          Object {
            "map": undefined,
            "name": "17ih1bc",
            "next": undefined,
            "styles": "
              
    display: flex;
    justify-content: center;
    flex-direction: column;
  
              
    padding: 15px;
  
              flex-grow: 1;
            ",
          }
        }
        onClick={[Function]}
      >
        Census Field Assistant
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        Menu
      </div>
    </div>
  </header>
  <div
    css={
      Object {
        "map": undefined,
        "name": "tejz0l",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, #003d59, #33637a);
  ;
      ",
      }
    }
  >
    <img
      alt="Main logo"
      css={
        Object {
          "map": undefined,
          "name": "10mfl7n",
          "next": undefined,
          "styles": "
          padding: 0px 15px 20px 15px;
        ",
        }
      }
      data-test="ons-logo__header"
      src="/ONS_logo.svg"
    />
  </div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "o9ztju",
        "next": undefined,
        "styles": "
          
    margin: 0 auto;
    max-width: 700px;
  
          overflow: scroll;
          width: 100vw;
          display: flex;
          flex-direction: column;
          flex-grow: 1;
        ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "1k0aln6",
          "next": undefined,
          "styles": "
            flex-grow: 1;
          ",
        }
      }
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "15ac0on",
            "next": undefined,
            "styles": "
        border-radius: 4px;
        border: solid 2px rgb(248, 196, 30);
        background-color: rgb(253, 239, 173);
        margin: 15px 15px 0px 15px;
        
    padding: 15px;
  
      ",
          }
        }
      >
        <div
          className="Notification-heading-Style"
          css={
            Object {
              "map": undefined,
              "name": "kmpsy0",
              "next": undefined,
              "styles": "
          padding-top: 5px;
          padding-bottom: 10px;
        ",
            }
          }
        >
          Alert
        </div>
        <div
          className="Notification-body-Style"
          css={
            Object {
              "map": undefined,
              "name": "1a5rwwh",
              "next": undefined,
              "styles": "
          padding-top: 10px;
          padding-bottom: 5px;
        ",
            }
          }
          data-testid="alert-message"
        >
          this is test content
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "ypl6yy",
            "next": undefined,
            "styles": "
        border-bottom: 1px rgb(229, 229, 234) solid;
        padding: 15px 0px;
      ",
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1k8b10p",
              "next": undefined,
              "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        border-radius: 4px;
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        margin: 0px 10px;
        text-align: center;
        height: 40px;
        background-color: rgb(255, 255, 255);
        
      ",
            }
          }
          onClick={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1qs2efx",
                "next": undefined,
                "styles": "
            position: relative;
            color: #003d59;
          ",
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1wo7hj",
                  "next": undefined,
                  "styles": "
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-book fa-w-14 "
                data-icon="book"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Button-heading-Style"
            css={
              Object {
                "map": undefined,
                "name": "1bt83uw",
                "next": undefined,
                "styles": "
          margin: 0px 20px;
          color: #003d59;
        ",
              }
            }
          >
            Explore Content
          </div>
        </div>
      </div>
      <div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "1p7jpnp",
              "next": undefined,
              "styles": "
        
    padding: 15px 0px;
  ;
      ",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "qvcny6",
                "next": undefined,
                "styles": "
          
    padding: 15px 0px;
  ;
          
    padding: 5px 15px;
  
          display: flex;
        ",
              }
            }
          >
            <div
              className="Section-heading-Style"
            >
              MY BOOKMARKS
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "180i97l",
              "next": undefined,
              "styles": "
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        background-color: rgb(255, 255, 255);
        height: 74px;
        display: flex;
      ",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "t2r693",
                "next": undefined,
                "styles": "
            position: relative;
            left: 33px;
            color: #003d59;
            
    display: flex;
    justify-content: center;
    flex-direction: column;
  
            justify-content: center;
          ",
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "c8nikn",
                  "next": undefined,
                  "styles": "
              font-size: 30px;
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 "
                data-icon="bookmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            css={
              Object {
                "map": undefined,
                "name": "1ter12k",
                "next": undefined,
                "styles": "
          
    display: flex;
    justify-content: center;
    flex-direction: column;
  
          flex-grow:1
        ",
              }
            }
          >
            <div
              className="Button-heading-Style"
            >
              Bookmarks will show here
            </div>
            <div
              className="Button-subhead-Style"
              css={
                Object {
                  "map": undefined,
                  "name": "1mexe8m",
                  "next": undefined,
                  "styles": "
            text-align: center;
          ",
                }
              }
            >
              Bookmarks are stored on your device
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      css={
        Object {
          "map": undefined,
          "name": "ej75ms",
          "next": undefined,
          "styles": "
        
    padding: 30px 0px;
  
        width: 100%;
        padding: 10px 0px;
        background-color: rgb(236, 236, 237);
        display: flex;
        min-height: 100px;
        flex-direction: column;
        justify-content: center;
        flex-shrink: 0;
      ",
        }
      }
    >
      <img
        alt="Footer logo"
        css={
          Object {
            "map": undefined,
            "name": "1v6eegl",
            "next": undefined,
            "styles": "
          margin-bottom: 50px;
          margin-top: 50px;
        ",
          }
        }
        src="/footer_logo.svg"
      />
      <div
        className="Footer-Style"
      >
        © Office for National Statistics 2019
      </div>
    </div>
  </div>
</div>
`;

exports[`Index renders correctly without data and has no alert 1`] = `
<div
  css={
    Object {
      "map": undefined,
      "name": "vkixka",
      "next": undefined,
      "styles": "
        height: 100vh;
        display: flex;
        flex-direction: column;
      ",
    }
  }
>
  <header
    css={
      Object {
        "map": undefined,
        "name": "tejz0l",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, #003d59, #33637a);
  ;
      ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "1thgah9",
          "next": undefined,
          "styles": "
            display: flex;
          ",
        }
      }
    >
      <div
        className="Header-Title-Style"
        css={
          Object {
            "map": undefined,
            "name": "17ih1bc",
            "next": undefined,
            "styles": "
              
    display: flex;
    justify-content: center;
    flex-direction: column;
  
              
    padding: 15px;
  
              flex-grow: 1;
            ",
          }
        }
        onClick={[Function]}
      >
        Census Field Assistant
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="Header-button-Style"
        css={
          Object {
            "map": undefined,
            "name": "1sm5jo",
            "next": undefined,
            "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        background-color: rgb(255, 255, 255, 0.2);
        border-radius: 4px;
        margin: 10px 10px 10px 0px;
        min-width: 20px;
        object-fit: contain;
        text-align: center;
        height: 40px;
      ",
          }
        }
        data-testid="topbarlink-button"
        onClick={[Function]}
      >
        Menu
      </div>
    </div>
  </header>
  <div
    css={
      Object {
        "map": undefined,
        "name": "tejz0l",
        "next": undefined,
        "styles": "
        width: 100vw;
        
    background: linear-gradient(to left, #003d59, #33637a);
  ;
      ",
      }
    }
  >
    <img
      alt="Main logo"
      css={
        Object {
          "map": undefined,
          "name": "10mfl7n",
          "next": undefined,
          "styles": "
          padding: 0px 15px 20px 15px;
        ",
        }
      }
      data-test="ons-logo__header"
      src="/ONS_logo.svg"
    />
  </div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "o9ztju",
        "next": undefined,
        "styles": "
          
    margin: 0 auto;
    max-width: 700px;
  
          overflow: scroll;
          width: 100vw;
          display: flex;
          flex-direction: column;
          flex-grow: 1;
        ",
      }
    }
  >
    <div
      css={
        Object {
          "map": undefined,
          "name": "1k0aln6",
          "next": undefined,
          "styles": "
            flex-grow: 1;
          ",
        }
      }
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "ypl6yy",
            "next": undefined,
            "styles": "
        border-bottom: 1px rgb(229, 229, 234) solid;
        padding: 15px 0px;
      ",
          }
        }
      >
        <div
          css={
            Object {
              "map": undefined,
              "name": "1k8b10p",
              "next": undefined,
              "styles": "
        
    display: flex;
    justify-content: center;
    flex-direction: column;
  
        padding: 0px 10px;
        border-radius: 4px;
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        margin: 0px 10px;
        text-align: center;
        height: 40px;
        background-color: rgb(255, 255, 255);
        
      ",
            }
          }
          onClick={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1qs2efx",
                "next": undefined,
                "styles": "
            position: relative;
            color: #003d59;
          ",
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "1wo7hj",
                  "next": undefined,
                  "styles": "
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-book fa-w-14 "
                data-icon="book"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Button-heading-Style"
            css={
              Object {
                "map": undefined,
                "name": "1bt83uw",
                "next": undefined,
                "styles": "
          margin: 0px 20px;
          color: #003d59;
        ",
              }
            }
          >
            Explore Content
          </div>
        </div>
      </div>
      <div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "1p7jpnp",
              "next": undefined,
              "styles": "
        
    padding: 15px 0px;
  ;
      ",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "qvcny6",
                "next": undefined,
                "styles": "
          
    padding: 15px 0px;
  ;
          
    padding: 5px 15px;
  
          display: flex;
        ",
              }
            }
          >
            <div
              className="Section-heading-Style"
            >
              MY BOOKMARKS
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "map": undefined,
              "name": "180i97l",
              "next": undefined,
              "styles": "
        box-shadow: 0 2px 4px 0 rgba(212, 212, 212, 0.5);
        border: solid 1px #ececed;
        background-color: rgb(255, 255, 255);
        height: 74px;
        display: flex;
      ",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "t2r693",
                "next": undefined,
                "styles": "
            position: relative;
            left: 33px;
            color: #003d59;
            
    display: flex;
    justify-content: center;
    flex-direction: column;
  
            justify-content: center;
          ",
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "c8nikn",
                  "next": undefined,
                  "styles": "
              font-size: 30px;
              position: absolute;
            ",
                }
              }
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 "
                data-icon="bookmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            css={
              Object {
                "map": undefined,
                "name": "1ter12k",
                "next": undefined,
                "styles": "
          
    display: flex;
    justify-content: center;
    flex-direction: column;
  
          flex-grow:1
        ",
              }
            }
          >
            <div
              className="Button-heading-Style"
            >
              Bookmarks will show here
            </div>
            <div
              className="Button-subhead-Style"
              css={
                Object {
                  "map": undefined,
                  "name": "1mexe8m",
                  "next": undefined,
                  "styles": "
            text-align: center;
          ",
                }
              }
            >
              Bookmarks are stored on your device
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      css={
        Object {
          "map": undefined,
          "name": "ej75ms",
          "next": undefined,
          "styles": "
        
    padding: 30px 0px;
  
        width: 100%;
        padding: 10px 0px;
        background-color: rgb(236, 236, 237);
        display: flex;
        min-height: 100px;
        flex-direction: column;
        justify-content: center;
        flex-shrink: 0;
      ",
        }
      }
    >
      <img
        alt="Footer logo"
        css={
          Object {
            "map": undefined,
            "name": "1v6eegl",
            "next": undefined,
            "styles": "
          margin-bottom: 50px;
          margin-top: 50px;
        ",
          }
        }
        src="/footer_logo.svg"
      />
      <div
        className="Footer-Style"
      >
        © Office for National Statistics 2019
      </div>
    </div>
  </div>
</div>
`;
